# saleor-price-manager

./: .env.backup  .env.example  .gitignore  .watchmanconfig  AI.md  BANG  BANG_BACKEND_ONLY  BUILD  CHANNEL_SUBDOMAIN_MAPPING.md  DEPLOY  Dockerfile  Dockerfile.test  EXAMPLES.md  MIGRATION_SUMMARY.md  PRODUCTION.md  QUICKSTART.md  README.md  START_FRONTEND  TEST  TESTING.md  TEST_COMPREHENSIVE  TEST_DOCKER  TROUBLESHOOTING.md  UVICORN_OPTIMIZATION.md  docker-compose.test.yml  docker-compose.yml  init.bash  main.py  pytest.ini  requirements-dev.lock.txt  requirements-dev.txt  requirements.lock.txt  requirements.txt  sonar-project.properties  test_rust.py
.github/workflows/: tests.yml
app/api/: channels.py  prices.py  products.py  webhooks.py
app/core/: config.py  security.py
app/models/: schemas.py
app/saleor/: api.py  client.py  init.py
app/services/: discount_service.py  markup_service.py  price_calculator.py
docs/api/: .yamllint  README.md  current-openapi.json  old-petstore-example.yaml  saleor-price-manager.yaml  updated-openapi.json
frontend/: .env.example  Dockerfile.playwright  Dockerfile.test  PRODUCTION_DEPLOYMENT.md  SVELTE5_MIGRATION.md  package-lock.json  package.json  playwright.config.js  svelte.config.js  tailwind.config.js  vite.config.ts
frontend/playwright-report/: index.html
frontend/public/: index.html
legacy/: deploy.pt1.sh  deploy.sh
rust_modules/price_calculator/: Cargo.toml  build.rs  pyproject.toml
rust_modules/price_calculator/src/: lib.rs
scripts/: compare-api-specs.py
templates/: index.html
tests/: conftest.py
(+41 files in other folders)
