[package]
name = "price_calculator"
version = "0.1.0"
edition = "2021"
description = "High-performance price calculation module for Saleor Price Manager"

[lib]
name = "price_calculator"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module"] }
rust_decimal = "1.35.0"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
pyo3-build-config = "0.20.0"